--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,22 @@ margin-bottom: 20px;
 background-color: rgb(184, 179, 179);
 }
 
+.btn1.2{
+width: 100px;
+height: 50px;
+color:rgb(106, 104, 99);;
+font-size: 30px;
+display: block;
+border: 1px solid;
+border-radius:10px ;
+text-align: center;
+text-decoration: none;
+margin-bottom: 20px;
+}
+.btn1.2:hover{
+background-color: rgb(184, 179, 179);
+}
+
 .btn2{
 width: 100px;
 height: 50px;
@@ -35,4 +51,5 @@ margin-top: 20px;
 }
 .btn2:hover{
 background-color: rgb(184, 179, 179);
+
 }
