--- a/style/style.css
+++ b/style/style.css
@@ -3,8 +3,11 @@ h1 {
     font-size: 70px;
     text-align: center;
 }
-
-
+.title{
+     text-align: center; 
+    margin-top: 0; 
+    padding-top: 10px; 
+}
 .btn1{
 width: 200px;
 height: 50px;
@@ -54,4 +57,13 @@ line-height: 50px;
 }
 .btn3:hover{
 background-color: rgb(184, 179, 179);
+}
+.avatar{
+  width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #555;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+
 }
